# CS106B

./: .gitignore  README.md
assignments/01_Life/: README.md
assignments/01_Life/res/: dinner-table.txt  flower.txt  format.txt  rpent.txt  seeds.txt  simple.txt  snowflake.txt  spiral.txt  tictactoe.txt
assignments/01_Life/src/: life.cpp  lifegui.h
assignments/02_Serafini/: README.md
assignments/02_Serafini/Ngrams/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ngrams
assignments/02_Serafini/Ngrams/lib/StanfordCPPLib/collections/: grid.h  hashcode.cpp  hashmap.h  linkedhashmap.h  map.h  priorityqueue.h  queue.h  set.h  stack.h  stl.h
assignments/02_Serafini/Ngrams/lib/StanfordCPPLib/graphics/: gbufferedimage.h  gevents.cpp  ginteractors.h  gobjects.cpp  gobjects.h  goptionpane.h  gtable.h  gtypes.cpp  gtypes.h
assignments/02_Serafini/Ngrams/lib/StanfordCPPLib/io/: bitstream.cpp  console.h  plainconsole.cpp  server.cpp  server.h
assignments/02_Serafini/Ngrams/lib/StanfordCPPLib/system/: call_stack_gcc.cpp  call_stack_windows.cpp
assignments/02_Serafini/Ngrams/lib/StanfordCPPLib/util/: gmath.cpp  note.cpp  random.cpp  random.h  recursion.cpp  strlib.cpp  strlib.h  timer.h
assignments/02_Serafini/Ngrams/res/: cisneros.txt  hughes.txt  hurston.txt  isiguro.txt  morrison.txt  myinput.txt
assignments/02_Serafini/Ngrams/src/: ngrams.cpp
assignments/02_Serafini/WordLadder/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  wordladder
assignments/02_Serafini/WordLadder/lib/: readme.txt
assignments/02_Serafini/WordLadder/lib/StanfordCPPLib/collections/: basicgraph.h  graph.h  hashcode.h  hashset.h  lexicon.cpp  linkedhashset.h  linkedlist.h  sparsegrid.h  vector.h
assignments/02_Serafini/WordLadder/lib/StanfordCPPLib/graphics/: gevents.h  ginteractors.cpp  gtimer.cpp  gtimer.h
assignments/02_Serafini/WordLadder/lib/StanfordCPPLib/io/: base64.cpp  base64.h  (+7 more)
assignments/02_Serafini/WordLadder/res/: EnglishWords.txt  dictionary.txt  smalldict1.txt  smalldict2.txt  smalldict3.txt
assignments/02_Serafini/WordLadder/src/: wordladder.cpp
assignments/03_Recursion/: README.md
assignments/03_Recursion/Fractals/src/: fractalgui.cpp  fractalgui.h  fractals.cpp  fractals.h
assignments/03_Recursion/GrammarSolver/: CMakeLists.txt
assignments/03_Recursion/GrammarSolver/res/: expression.txt  nonsense.txt  sentence.txt  sentence2.txt
assignments/03_Recursion/GrammarSolver/src/: grammarmain.cpp  grammarsolver.cpp  grammarsolver.h
assignments/04_Boggle/: README.md
assignments/04_Boggle/src/: Boggle.cpp  Boggle.h  bogglegui.cpp  bogglegui.h  bogglemain.cpp  boggleplay.cpp
assignments/Life/: Life.pro
assignments/Life/lib/StanfordCPPLib/: bitstream.cpp
assignments/Life/res/: diehard.txt  fish.txt  glider-explosion.txt  glider-gun.txt  glider.txt  mycolony.txt  quilt-square.txt  stableplateau.txt
assignments/Life/src/: life.cpp  lifegui.cpp
hello/: CMakeLists.txt  README.md
hello/lib/StanfordCPPLib/collections/: collections.h  dawglexicon.cpp  dawglexicon.h  deque.h  lexicon.h  shuffle.h
hello/lib/StanfordCPPLib/graphics/: gbufferedimage.cpp  gfilechooser.h  gtable.cpp  gtextarea.cpp  gtextarea.h  gwindow.cpp  gwindow.h
hello/lib/StanfordCPPLib/io/: simpio.h  tokenscanner.h  urlstream.h
hello/lib/StanfordCPPLib/private/: platform.cpp
hello/lib/StanfordCPPLib/system/: error.cpp  error.h  exceptions.cpp  exceptions.h  stack_exception.h
hello/lib/StanfordCPPLib/util/: gmath.h  point.cpp  point.h  regexpr.h  sound.h  timer.cpp
hello/res/: readme.txt
hello/src/: main.cpp
(+6 files in other folders)
